--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                     <li><a href="#about-section" class="nav-link">About Me</a></li>
                     <li><a href="#what-we-do-section" class="nav-link">Projects</a></li>
                     <li><a href="#contact-section" class="nav-link">Contact</a></li>
+                    <li><a id="git-cont" href="https://github.com/daveh07" class="pl-0 pr-3"><span class="icon-github"></span></a></li>
                   </ul>
                 </div>
               </nav>
