--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <div class="service h-100">
                   <h3>Cameron Batho Building</h3>
                   <p>Carpentry/Builder website for a small building company based in Central West, NSW. Site is awaiting confirmation
-                    of testimonials and final approval before being final web hosting is implemented
+                    of testimonials and final approval before final web hosting is implemented
                   </p>
                   <p><a href="https://daveh07.github.io/cb-building/" target="_blank" class="readmore">Live Site</a></p>
                   <p><a href="https://github.com/daveh07/cb-building" target="_blank" class="readmore">Source Code</a></p>
